# SimonFace

./: README  simonface.patch
simonface/: .directory  CMakeLists.txt  main.cpp  simonface.cpp  simonface.h  simonface.pro  simonface.ui
tryouts/SimonFace/: CMakeLists.txt  createsimonfaceconditionwidget.cpp  simonfacecondition.cpp  simonfaceconditionplugin.desktop
